--- a/app/templates/searchform.html
+++ b/app/templates/searchform.html
@@ -11,7 +11,10 @@
         <div class="form-group row">
             <label for="maxDistance" class="col-sm-3 col-form-label">Max distance</label>
             <div class="col-sm-8">
-                {{ form.md(class="form-control", id="md", type="range", value="5", min="1", max="25", oninput="this.parentElement.nextElementSibling.childNodes[0].value = this.value + 'km'") }}
+                {{ form.md(class="form-control", id="md", 
+                    type="range", value="5", min="1", max="25", 
+                    oninput="this.parentElement.nextElementSibling.childNodes[0].value = this.value + 'km'") 
+                }}
             </div>
             <div class="col-sm-1" id="maxDistanceDisplay"><output>5km</output></div>
         </div>
