--- a/app/templates/searchform.html
+++ b/app/templates/searchform.html
@@ -1,4 +1,3 @@
-<!-- The following form was derived from https://getbootstrap.com/docs/4.0/components/forms/? -->
 <div class="container">
     <h1>Advanced Search</h1>
     <form action="{{ url_for('search') }}" accept-charset="UTF-8" method="get">
@@ -11,7 +10,7 @@
         <div class="form-group row">
             <label for="maxDistance" class="col-sm-3 col-form-label">Max distance</label>
             <div class="col-sm-8">
-                {{ form.md(class="form-control", id="md", 
+                {{ form.md(class="form-range", id="md", 
                     type="range", value="5", min="1", max="25", 
                     oninput="this.parentElement.nextElementSibling.childNodes[0].value = this.value + 'km'") 
                 }}
