--- a/app/templates/searchform.html
+++ b/app/templates/searchform.html
@@ -4,10 +4,10 @@
         <div class="form-group row">
             <label for="nameSearch" class="col-sm-3 col-form-label">What are you looking for?</label>
             <div class="col-sm-9">
-                {{ form.q(class="form-control", id="nameSearch", maxlength="1024") }}
+                {{ form.q(class="form-control", id="nameSearch", maxlength="1024", value=request.args.get('q')) }}
             </div>
         </div>
-        <div class="form-group row">
+        <div class="form-group row row-buffer">
             <label for="maxDistance" class="col-sm-3 col-form-label">Max distance</label>
             <div class="col-sm-8">
                 {{ form.md(class="form-range", id="md", 
@@ -17,14 +17,15 @@
             </div>
             <div class="col-sm-1" id="maxDistanceDisplay"><output>5km</output></div>
         </div>
-        <div class="form-group row">
+        <div class="form-group row row-buffer">
             <label for="order" class="col-sm-3 col-form-label">Sort by</label>
             <div class="col-sm-9">
                 {{ form.order(class="form-control", id="order") }}
             </div>
         </div>
-        <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-2">Search</button>
+        <div class="col-sm-11"></div>
+        <div class="col-sm-1">
+            <button type="submit" class="btn btn-primary mb-2 row-buffer">Search</button>
         </div>  
     </form>
 </div>
