--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -2,7 +2,7 @@
 {% block title %}Sign Up{% endblock %}
 {% block content %}
 <div class="container col-sm-6 col-lg-4">
-    <form method="post">
+    <form action="" method="post">
         {{ form.hidden_tag() }}
         <!-- Form header-->
         <div class="text-center">
