Restyled submit buttons

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -20,7 +20,7 @@
             {% endfor %}
         </p>
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit(_class="submit-btn") }}</p>
+        <p>{{ form.submit() }}</p>
     </form>
     <small>Don't have an account? Sign up <a href="/signup">here</a></small>
 </div>
