--- a/app/static/index.css
+++ b/app/static/index.css
@@ -106,7 +106,7 @@ body {
 #submit{
     background-color: rgb(33,150,243);
     color: white;
-    width: 100%;
+    /*width: 50%;*/
     padding: 5px;
 }
 
