--- a/app/templates/items.html
+++ b/app/templates/items.html
@@ -32,20 +32,15 @@
 <div class="item-container">
     {% if post %}
         <!-- Display item posts -->
-        {% if post.images %}
-            {% for img in post.images %}
-                <img src="{{ img.src }}" alt="Item post" class="small-post" onclick="enlargepost(this)">
-            {% endfor %}
-        {% else %}
-            <!-- Default image if no item imagess are found -->
-            <img src="{{ url_for('static', filename='book.jpg') }}" alt="Default post" class="small-post" onclick="enlargepost(this)">
-        {% endif %}
+        <img src="{{ post.images.src }}" alt="Item post" class="small-post" onclick="enlargepost(this)">
 
         <!-- Display item information -->
         <div class="item-information" id="item-info">
             <h2>Item Information</h2>
             <p><strong>Name:</strong> {{ post.item_name }}</p>
             <p><strong>Description:</strong> {{ post.desc }}</p>
+            <p><strong>Posted By:</strong> {{ post.author.username }}</p>
+            <p><strong>Item Type:</strong> {{ post_type }}</p>
             <!-- Button to request the item -->
             <button id="requestButton" onclick="requestItem(this)">I want this item!</button>
         </div>
