--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -7,19 +7,41 @@
   <p>
     Lives at: {{user.address.number}} {{user.address.street}}, {{user.address.city}}, {{user.address.state}}, {{user.address.country}}
   </p>
-  <div class="row d-flex justify-content-center">
+  <div class="row d-flex justify-content-center" id="mainContent">
     {% for post in posts %}
-    <div class="profile_post">
+    <div class="anItem col-lg-2 col-md-3 col-sm-5 col-xs-6" id="{{post.id}}" onclick="openItemPage(event, {{ post.id }})">
+      <p>{{post.post_type}}</p>
+      <!---
       <p>
-        {{ post.author.username }} posted: <b>{{ post.item_name }}</b> at {{ post.timestamp }}
+        {{ post.username }} posted: <b>{{ post.item_name }}</b> at {{ post.timestamp }}
       </p>
+      -->
       {% if post.images %}
-      <img class="profile_post_img" src="{{ post.images.src }}">
+      <img class="img-fluid" src="{{ post.images.src }}">
       {%else %}
       <img class="profile_post_img" src="/static/book.jpg">
       {% endif %}
+      <p class="name">{{post.item_name}}</p>
+      <p>Located in {{post.author.address.city}}, {{post.author.address.postcode}}</p>
+      <p class="text-end">{{ calcTimeAgo(post.timestamp)}}</p>
     </div>
     {% endfor %}
   </div>
 </div>
+<!--
+<div class="row d-flex justify-content-center" id="mainContent">
+  {% for post in posts %}
+  <div class="anItem col-lg-2 col-md-3 col-sm-5 col-xs-6" id="{{post.id}}" onclick="openItemPage(event, {{ post.id }})">
+      <p>{{post.post_type}}</p>
+      <!-- If the image wasn't passed, render the default --><!--
+      <img class="img-fluid" 
+          src="{% if post.src %}{{ post.src }}{% else %}{{ defaultimage }}{% endif %}">
+      <p class="name">{{post.item_name}}</p>
+      <p>Located in {{post.author.address.city}}, {{post.author.address.postcode}}</p>
+      <p class="d-none d-xl-block">Posted by {{post.author}}</p>
+      <p class="text-end">{{ post.timestamp }}</p>
+  </div>
+  {% endfor %}
+</div>
+-->
 {% endblock %}
