--- a/app/templates/displayitems.html
+++ b/app/templates/displayitems.html
@@ -5,13 +5,20 @@
         <p>{{post.post_type}}</p>
         <!-- If the image wasn't passed, render the default -->
         <div class="d-flex align-items-center w-100" style="aspect-ratio:1/1;">
-        <img class="img-fluid mx-auto d-block align-middle mw-100 mh-100"
-            src="{% if post.src %}{{ post.src }}{% else %}{{ defaultimage }}{% endif %}">
-        </div>
+            <img class="img-fluid mx-auto d-block align-middle mw-100 mh-100"
+                src="
+                {% if post.images.src %}
+                    {{ post.images.src }}
+                {% else %}
+                    {{ '/static/book.jpg' }}
+                {% endif %}">
+            </div>
         <p class="name">{{post.item_name}}</p>
-        <p>Located in {{post.city}}, {{post.postcode}}</p>
-        <p class="d-none d-xl-block">Posted by {{post.username}}</p>
-        <p class="text-end">{{ post.timestamp }}</p>
+        <p>Located in {{post.author.address.city}}, {{post.author.address.postcode}}</p>
+        {% if page=="user" %}
+            <p class="d-none d-xl-block">Posted by {{post.username}}</p>
+        {% endif %}
+        <p class="text-end">{{ calcTimeAgo(post.timestamp) }}</p>
     </div>
     {% endfor %}
 </div>
