--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -2,31 +2,12 @@
 {% block title %}Profile{% endblock %}
 {% block content %}
 <div class="container">
-  <h1>User: {{ user.username }}</h1>
-  <hr>
-  <p>
-    Lives at: {{user.address.number}} {{user.address.street}}, {{user.address.city}}, {{user.address.state}}, {{user.address.country}}
-  </p>
-  <div class="row d-flex justify-content-center" id="mainContent">
-    {% for post in posts %}
-    <div class="anItem col-lg-2 col-md-3 col-sm-5 col-xs-6" id="{{post.id}}" onclick="openItemPage(event, {{ post.id }})">
-      <p>{{post.post_type}}</p>
-      <!---
-      <p>
-        {{ post.username }} posted: <b>{{ post.item_name }}</b> at {{ post.timestamp }}
-      </p>
-      -->
-      {% if post.images %}
-      <img class="img-fluid" src="{{ post.images.src }}">
-      {%else %}
-      <img class="profile_post_img" src="/static/book.jpg">
-      {% endif %}
-      <p class="name">{{post.item_name}}</p>
-      <p>Located in {{post.author.address.city}}, {{post.author.address.postcode}}</p>
-      <p class="text-end">{{ calcTimeAgo(post.timestamp)}}</p>
-    </div>
-    {% endfor %}
-  </div>
+    <h1>User: {{ user.username }}</h1>
+    <hr>
+    <p>
+        Lives at: {{user.address.number}} {{user.address.street}}, {{user.address.city}}, {{user.address.state}}, {{user.address.country}}
+    </p>
+    {% include "displayitems.html" %}
 </div>
 <!--
 <div class="row d-flex justify-content-center" id="mainContent">
