--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -13,14 +13,14 @@
         <!-- Form body -->
         <div class="form-group row">
             {{ form.username.label(class="col-5 col-form-label") }}
-            {{ form.username(_class="form-control col")}}
+            {{ form.username(class="form-control col")}}
             {% for error in form.username.errors %}
                 <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </div>
         <div class="form-group row">
             {{ form.email.label(class="col-5 col-form-label") }}
-            {{ form.email(_class="form-control col")}}
+            {{ form.email(class="form-control col")}}
             {% for error in form.email.errors %}
                 <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
@@ -28,18 +28,63 @@
         <div class="form-group">
             <div class="row">
                 {{ form.password.label(class="col-5 col-form-label") }}
-                {{ form.password(_class="form-control col")}}
+                {{ form.password(class="form-control col")}}
                 {% for error in form.password.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                 {% endfor %}
             </div>
             <div class="row">
                 {{ form.confirmed_password.label(class="col-5 col-form-label") }}
-                {{ form.confirmed_password(_class="form-control col")}}
+                {{ form.confirmed_password(class="form-control col")}}
                 {% for error in form.confirmed_password.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                 {% endfor %}
             </div>
+        </div>
+        <!--Address fields-->
+        <div class="form-group">
+            <div class="row">
+                {{ form.address_line1.label(class="col-5 col-form-label") }}
+                {{ form.address_line1(class="form-control col")}}
+            </div>
+            <div class="row">
+                {{ form.address_line2.label(class="col-5 col-form-label") }}
+                {{ form.address_line2(class="form-control col-7")}}
+            </div>
+            {% for error in form.address_line1.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+            {% for error in form.address_line2.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
+        <div class="form-group row">
+            {{ form.suburb.label(class="col-form-label col") }}
+            {{ form.suburb(class="form-control col")}}
+            {{ form.postcode.label(class="col-form-label col") }}
+            {{ form.postcode(class="form-control col")}}
+            {% for error in form.suburb.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+            {% for error in form.postcode.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
+        <div class="form-group row">
+
+            <label class="col-form-label col-3">State & City</label>
+
+
+            {{ form.state(class="form-control col-3")}}
+            {{ form.city(class="form-control col")}}
+            
+            {% for error in form.state.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+            {% for error in form.city.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+
         </div>
         {{ form.submit() }}
     </form>
