--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-{% block title %}Profile{% endblock %}
+{% block title %}{{ user.username}}'s Profile{% endblock %}
 {% block content %}
 <div class="container">
   <h1>User: {{ user.username }}</h1>
   <hr>
   <p>
-    Lives at: {{user.address.number}} {{user.address.street}}, {{user.address.city}}, {{user.address.state}}, {{user.address.country}}
+    Lives in: {{user.address.suburb}}, {{user.address.city}}, {{user.address.state}}
   </p>
   <div class="row d-flex justify-content-center">
     {% for post in posts %}
