--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -2,10 +2,15 @@
 {% block title %}{{ user.username}}'s Profile{% endblock %}
 {% block content %}
 <div class="container">
-    <h1>User: {{ user.username }}</h1>
+    <h1>{{ user.username }}</h1>
     <hr>
     <p>
-        Lives at: {{user.address.number}} {{user.address.street}}, {{user.address.city}}, {{user.address.state}}, {{user.address.country}}
+        Made {{user.points}} {% if user.points != 1 %}Posts{% else %}Post{%endif%} 
+        ({{user.given}} {% if user.given != 1 %}Offers{% else %}Offer{%endif%}, 
+        {{user.requested}} {% if user.requested != 1 %}Requests{% else %}Request{%endif%})
+    </p>
+    <p>
+        Lives in: {{user.address.city}}, {{user.address.postcode}}, {{user.address.state}}, {{user.address.country}}
     </p>
     {% include "displayitems.html" %}
 </div>
