css collated into one file
The ideal is to have multiple, small, maintainable css files, and merge them to one at runtime. A later problem.

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block title %}About{% endblock %}
 {% block content %}
-<div class="row aboutsection">
-    <div class="abouttext col-md-6">
+<div class="row about-section">
+    <div class="about-text col-md-6">
         <h2>Our Vision</h2>
         <p>We aim to create a community-driven platform where individuals are able to</p>
         <ul>
@@ -15,15 +15,15 @@
         <p>We envision a world where every item has value and every act of giving strengthens bonds within neighbourhoods, reduces waste, promotes environmental stewardship, and cultivates a sense of belonging.</p>
     </div>
     <div class="col-md-6">
-        <img class="aboutimg d-flex align-items-center justify-content-center" src="/static/assets/aboutgraphic1.png"/>
+        <img class="about-img d-flex align-items-center justify-content-center" src="/static/assets/aboutgraphic1.png"/>
     </div>
 </div>
 
-<div class="row aboutsection">
+<div class="row about-section">
     <div class="col-md-6">
         <img class="aboutimg d-flex align-items-center justify-content-center" src="/static/assets/aboutgraphic2.png"/>
     </div>
-    <div class="abouttext col-md-6 order-first order-md-1">
+    <div class="about-text col-md-6 order-first order-md-1">
         <h2>Our Story</h2>
         <p>At <a class="newhometext">NewHome</a>, our story began with a simple idea: to build a platform to enable users worldwide an easy way to rehome unwanted items.</p>
         <p>Here, we define how consumption, ownership, and community are viewed. Fueled by a desire to challenge excessive consumerism and promote sustainable ways of living, we embarked on a journey to create a space where individuals could freely give and receive and create a sense of community.</p>
@@ -32,15 +32,15 @@
     </div>
 </div>
 
-<div class="row aboutsection">
-    <div class="abouttext col-md-6">
+<div class="row about-section">
+    <div class="about-text col-md-6">
         <h2>What we offer</h2>
         <p>At <a class="newhometext">NewHome</a>, we offer a user-friendly platform where users can give and receive freely, and foster community relations. Members can easily connect with others to find and offer items ranging from household goods to electronics to clothing. Anything given a new home is a reduction of our joint carbon footprint.</p>
         <p>Our website provides a place for acts of kindness, where members can declutter their homes, but also help others in finding items of use to them. We empower communities to embrace a conscious effort to reduce waste and promote sustainability.</p>
         <p>Whether you're in search of a specific item, or looking to give back, <a class="newhometext">NewHome</a> creates a welcoming and inclusive environment for all. Come join us in creating a better world.</p>
     </div>
     <div class="col-md-6">
-        <img class="aboutimg d-flex align-items-center justify-content-center" src="/static/assets/aboutgraphic3.png"/>
+        <img class="about-img d-flex align-items-center justify-content-center" src="/static/assets/aboutgraphic3.png"/>
     </div>
 </div>
 {% endblock %}
