--- a/app/static/index.css
+++ b/app/static/index.css
@@ -1,6 +1,29 @@
 /*
-This CSS file contains the style information for the navbar and footer.
-*/
+ * This CSS file contains the style information for the site.
+ */
+
+
+/*
+ * The following CSS is the style information for the base template,
+ * navbar and footer.
+ */
+#content {
+    margin-bottom: 40px;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    background-color: rgb(164, 242, 242);
+}
+
+.content {
+    flex: 1;
+    padding-left: 3%;
+    padding-right: 3%;
+}
 
 .navbar {
     background-color: #ccc;
@@ -21,8 +44,6 @@ This CSS file contains the style information for the navbar and footer.
     padding: 5px 0px;
 }
 
-.row-buffer { margin-top:10px; }
-
 .navbar a:not(.navbar-brand):hover {
     border-radius: 3px;
     background-color: #999;
@@ -41,26 +62,8 @@ This CSS file contains the style information for the navbar and footer.
     }
 }
 
-
-
-#content {
-    margin-bottom: 40px;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin: 0;
-}
-
-.content {
-    flex: 1;
-    padding-left: 3%;
-    padding-right: 3%;
-}
-
 .footer {
+    border-radius: 10px;
     flex-shrink: 0;
     height: 100px;
 }
@@ -70,56 +73,121 @@ body {
 }
 
 
-.profile_post_img {
+/*
+ * The following CSS represents the styles for the posts
+ * (as displayed on the home page, etc)
+ */
+.post {
+    background-color: white;
+    outline: 2px solid grey;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+}
+
+.post:hover {
+    background-color: lightgrey;
+    outline: 3px solid darkslategrey;
+    cursor: pointer;
+}
+
+.post > img {
+    display: block;
+    margin: auto;
+    border-radius: 2%;
+}
+
+.post > .name {
+    text-align: center;
+    font-size: larger;
+    font-weight: bold;
+}
+
+.post:hover > .name {
+    text-decoration: underline;
+}
+
+.post > p {
+    white-space: pre;
+    margin-bottom: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+@media (max-width: 576px) {
+    .post {
+        width: 75% !important;
+    }
+}
+
+/*
+ * The following contains the CSS for the profile page.
+ */
+.profile-post-img {
     height: 200px;
     width: 200px;
     object-fit: cover;
 }
 
-.profile_post {
+.profile-post {
     border: #2196F3;
     border-style: solid;
     padding: 1%;
 }
-.contactformmain {
+
+/*
+ * The following is the CSS for the contact form.
+ */
+
+ .contact-form-main {
     display: block;
     margin-left: auto;
     margin-right: auto;
     max-width: 50%;
 }
-.contactrow {
+
+.contact-row {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
 }
-.contactsubmit {
+
+.contact-submit {
     padding-top:1rem; 
     padding-right:20px; 
     float:right;
 }
 
+.row-buffer { 
+    margin-top:10px; 
+}
 
-.aboutsection {
+/*
+ * The following CSS is for the about page.
+ */
+ .aboutsection {
     padding-top:25px;
     padding-bottom:25px;
 }
 
-.aboutimg {
+.about-img {
     display: block;
     margin: auto;
 }
-.abouttext {
+.about-text {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+
 @media (max-width: 768px) {
-    .abouttext {
+    .about-text {
         max-width: 75%;
     }
-    .aboutimg {
+    .about-img {
         max-width: 75%;
     }
 }
+
 @media (min-width: 768px) {
     .abouttext {
         max-width: 30%;
@@ -133,41 +201,4 @@ body {
 .newhometext {
     color: rgb(33,150,243) !important;
     font-weight: bold;
-}
-
-.anItem {
-    background-color: white;
-    outline: 2px solid grey;
-    border-radius: 10px;
-    padding: 10px;
-    margin: 10px;
-}
-.anItem:hover {
-    background-color: lightgrey;
-    outline: 3px solid darkslategrey;
-    cursor: pointer;
-}
-.anItem > img {
-    display: block;
-    margin: auto;
-    border-radius: 2%;
-}
-.anItem > .name {
-    text-align: center;
-    font-size: larger;
-    font-weight: bold;
-}
-.anItem:hover > .name {
-    text-decoration: underline;
-}
-.anItem > p {
-    white-space: pre;
-    margin-bottom: 0;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-@media (max-width: 576px) {
-    .anItem {
-        width: 75% !important;
-    }
 }
