--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -9,14 +9,14 @@
   </p>
   <div class="row d-flex justify-content-center">
     {% for post in posts %}
-    <div class="profile_post">
+    <div class="profile-post">
       <p>
         {{ post.author.username }} posted: <b>{{ post.item_name }}</b> at {{ post.timestamp }}
       </p>
       {% if post.images %}
-      <img class="profile_post_img" src="{{ post.images.src }}">
+      <img class="profile-post-img" src="{{ post.images.src }}">
       {%else %}
-      <img class="profile_post_img" src="/static/book.jpg">
+      <img class="profile-post-img" src="/static/book.jpg">
       {% endif %}
     </div>
     {% endfor %}
