--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -5,7 +5,7 @@
   <h1>User: {{ user.username }}</h1>
   <hr>
   <p>
-    Lives at: {{user.address.number}} {{user.address.street}}, {{user.address.city}}, {{user.address.state}}, {{user.address.country}}
+    Lives at: {{user.address.street}}, {{user.address.city}}, {{user.address.state}}, {{user.address.country}}
   </p>
   <div class="row d-flex justify-content-center">
     {% for post in posts %}
