--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -2,6 +2,6 @@
 {% block title %}Search Results{% endblock %}
 {% block content %}
 {% include "searchform.html" %}
-<hr style="width:50%;margin:20px auto;"/>
+<hr style="width:50%;margin:20px auto;">
 {% include "displayitems.html" %}
 {% endblock %}
