--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -15,13 +15,17 @@
         <p>We envision a world where every item has value and every act of giving strengthens bonds within neighbourhoods, reduces waste, promotes environmental stewardship, and cultivates a sense of belonging.</p>
     </div>
     <div class="col-md-6">
-        <img class="about-img d-flex align-items-center justify-content-center" src="/static/assets/aboutgraphic1.png"/>
+        <img class="about-img d-flex align-middle justify-content-center" 
+            src="/static/assets/aboutgraphic1.png"
+            alt="Working together">
     </div>
 </div>
 
 <div class="row about-section">
     <div class="col-md-6">
-        <img class="aboutimg d-flex align-items-center justify-content-center" src="/static/assets/aboutgraphic2.png"/>
+        <img class="about-img d-flex align-middle justify-content-center" 
+            src="/static/assets/aboutgraphic2.png"
+            alt="A woman speaking">
     </div>
     <div class="about-text col-md-6 order-first order-md-1">
         <h2>Our Story</h2>
@@ -40,7 +44,9 @@
         <p>Whether you're in search of a specific item, or looking to give back, <a class="newhometext">NewHome</a> creates a welcoming and inclusive environment for all. Come join us in creating a better world.</p>
     </div>
     <div class="col-md-6">
-        <img class="about-img d-flex align-items-center justify-content-center" src="/static/assets/aboutgraphic3.png"/>
+        <img class="about-img d-flex align-middle justify-content-center" 
+            src="/static/assets/aboutgraphic3.png"
+            alt="Gifting items">
     </div>
 </div>
 {% endblock %}
