--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h1>Login</h1>
-    <form action="" method="post" novalidate>
+    <form method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
             {{ form.username.label }}<br>
