cleaned route signup

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -28,7 +28,7 @@
                 <input class="form-control col-4" type="password" id="confirmed_password" name="confirmed_password" placeholder="Confirm Password">
             </div>
         </div>
-        <button type="submit" class="btn btn-primary btn-xlg col" method="post">Create Account</button>
+        <button type="submit" class="btn btn-primary btn-xlg col">Create Account</button>
     </form>
 </div>
 {% endblock %}
