Address line 2 now has flexible width

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -49,7 +49,7 @@
             </div>
             <div class="row">
                 {{ form.address_line2.label(class="col-5 col-form-label") }}
-                {{ form.address_line2(class="form-control col-7")}}
+                {{ form.address_line2(class="form-control col")}}
             </div>
             {% for error in form.address_line1.errors %}
                 <span style="color: red;">[{{ error }}]</span>
