--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -71,8 +71,8 @@
             <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
         <div class="form-group row">
-            <label class="col-form-label col-4">State & City</label>
-            {{ form.state(class="form-control col-3")}}
+            <label class="col-form-label col col-4">State & City</label>
+            <div class="col-3">{{ form.state(class="form-control col")}}</div>
             {{ form.city(class="form-control col")}}
         </div>
         {% for error in form.state.errors %}
