--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<script src="index.js"></script>
+<script src="static/index.js"></script>
 {% include "displayitems.html" %}
 {% endblock %}
