added icons instead of bland text for displaying post types

--- a/app/static/index.css
+++ b/app/static/index.css
@@ -150,6 +150,12 @@ body {
     border-radius: 10px;
     padding: 10px;
     margin: 10px;
+    position: relative;
+}
+.anItem span {
+    position: absolute;
+    top: 1%;
+    right: 2%;
 }
 .anItem:hover {
     background-color: lightgrey;
