Resolve merge conflicts

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Sign Up{% endblock %}
 {% block content %}
-<script src="location.js"></script>
+<script src="/static/location.js"></script>
 <div class="container col-sm-6 col-lg-4">
     <form action="" method="post">
         {{ form.hidden_tag() }}
