--- a/app/templates/displayitems.html
+++ b/app/templates/displayitems.html
@@ -1,7 +1,7 @@
 <!-- Render each item to the page -->
 <div class="row d-flex justify-content-center" id="mainContent">
     {% for post in posts %}
-    <div class="anItem col-lg-2 col-md-3 col-sm-5 col-xs-6" id="{{post.id}}" onclick="openItemPage(event, {{ post.id }})">
+    <div class="post col-lg-2 col-md-3 col-sm-5 col-xs-6" id="{{post.id}}" onclick="openItemPage(event, {{ post.id }})">
         <span>
             {% if post.post_type == "OFFER" %}
                 <i class="bi bi-gift"></i>
