--- a/app/templates/searchform.html
+++ b/app/templates/searchform.html
@@ -1,4 +1,4 @@
-<script src="location.js"></script>
+<script src="/static/location.js"></script>
 <div class="container">
     <h1>Advanced Search</h1>
     <form action="{{ url_for('main.search') }}" accept-charset="UTF-8" method="get">
