--- a/app/templates/displayitems.html
+++ b/app/templates/displayitems.html
@@ -1,5 +1,6 @@
 <!-- Render each item to the page -->
 <div class="row d-flex justify-content-center" id="mainContent">
+    {% if posts.all() %}
     {% for post in posts %}
     <div class="post col-lg-2 col-md-3 col-sm-5 col-xs-6" id="{{post.id}}" onclick="openItemPage(event, {{ post.id }})">
         <span>
@@ -28,4 +29,8 @@
         <p class="text-end">{{ calcTimeAgo(post.timestamp) }}</p>
     </div>
     {% endfor %}
+    {% else %}
+    <h2>No posts found</h2>
+    <p>Perhaps you should post something <a href="{{url_for('main.upload')}}">here</a>.</p>
+    {% endif %}
 </div>
