--- a/app/templates/items.html
+++ b/app/templates/items.html
@@ -26,6 +26,13 @@
                 button.innerText = "Item requested! Please wait for uploader to respond";
             }
         }
+        //Adapted from https://stackoverflow.com/a/16849202:
+        function deletePost(e)
+            {
+                if(confirm('Do you want to delete this post?')) {
+                    window.location.href = "/"; 
+                }
+            }
     </script>
 </head>
 
@@ -45,8 +52,12 @@
                 <p><strong>Description:</strong> {{ post.desc }}</p>
                 <p><strong>Posted By:</strong> {{ post.author.username }}</p>
                 <p><strong>Item Type:</strong> {{ post_type }}</p>
+                {% if post.author == current_user %}
+                <i id = "delete" class="bi bi-trash" onclick="deletePost(event)"></i>
+                {% else %}
                 <!-- Button to request the item -->
                 <button id="requestButton" onclick="requestItem(this)">I want this item!</button>
+                {% endif %}
             </div>
         </div>
     {% else %}
