--- a/app/templates/searchform.html
+++ b/app/templates/searchform.html
@@ -11,12 +11,12 @@
         </div>
         <div class="form-group row row-buffer">
             <label class="col-sm-3 col-form-label">Max distance</label>
-            <div class="col-sm-8">
+            <div class="col-sm-7">
                 {{ form.md(class="form-range", id="md", 
                     type="range", value=request.args.get('md','25'), min="1", max="100") 
                 }}
             </div>
-            <div class="col-sm-1"><output id="mdDisplay">{{ request.args.get('md','25') }}</output>km</div>
+            <div class="col-sm-2"><output id="mdDisplay">{{ request.args.get('md','25') }}</output></div>
         </div>
         <div class="form-group row row-buffer">
             <label class="col-sm-3 col-form-label">Sort by</label>
