--- a/app/templates/items.html
+++ b/app/templates/items.html
@@ -12,6 +12,7 @@
             float: right;
         }
     </style>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
         // Enlarges the post when clicked
         function enlargepost(img) {
@@ -26,11 +27,13 @@
                 button.innerText = "Item requested! Please wait for uploader to respond";
             }
         }
-        //Adapted from https://stackoverflow.com/a/16849202:
+        //Adapted from https://stackoverflow.com/a/16849202 and https://stackoverflow.com/a/49334973:
         function deletePost(e)
             {
                 if(confirm('Do you want to delete this post?')) {
-                    window.location.href = "/"; 
+                    $.getJSON("/delete_post/{{post.id}}",
+                        function(data) {});
+                    window.location.href = "/";
                 }
             }
     </script>
