Moved JS, hovering over image shows zoom in cursor

--- a/app/templates/items.html
+++ b/app/templates/items.html
@@ -8,6 +8,7 @@
             width: 250px;
             height: 250px;
             padding: 10px;
+            cursor: zoom-in;
         }
         .item-information {
             float: right;
@@ -49,21 +50,6 @@
             word-wrap: break-word
         }
     </style>
-    <script>
-        // Enlarges the post when clicked
-        function enlargepost(img) {
-            img.style.width = "50%";
-            img.style.height = "auto";
-            img.style.transition = "width 0.5s ease";
-        }
-        // Function to handle the request button click
-        function requestItem(button) {
-            // Toggle button text
-            if (button.innerText === "I want this item!") {
-                button.innerText = "Item requested! Please wait for uploader to respond";
-            }
-        }
-    </script>
 </head>
 
 <div class="item-container">
