Added more client-side validation

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Login{% endblock %}
 {% block content %}
+<script src="/static/loginform.js"></script>
 <div class="container">
     <h1>Login</h1>
     <form method="post" novalidate>
