--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -2,6 +2,7 @@
 {% block title %}Sign Up{% endblock %}
 {% block content %}
 <script src="/static/location.js"></script>
+<script src="/static/signupform.js"></script>
 <div class="container col-sm-6 col-lg-4">
     <form action="" method="post">
         {{ form.hidden_tag() }}
