Added label to profile button

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,7 +45,7 @@
                 <a class="nav-link" href="{{ url_for('main.upload') }}">Upload</a>
             </li>
             <li class="nav-item">
-                <a class="btn btn-outline-secondary" href="{{ url_for('main.user', username=current_user.username) }}"><i class="bi bi-person"></i></a>
+                <a class="btn btn-outline-secondary" href="{{ url_for('main.user', username=current_user.username) }}"><i class="bi bi-person"></i> My Profile</a>
             </li>
             {% endif %}
             </ul>
