--- a/app/templates/items.html
+++ b/app/templates/items.html
@@ -19,7 +19,7 @@
                 <h2>Item Information</h2>
                 <p><strong>Name:</strong> {{ post.item_name }}</p>
                 <p><strong>Description:</strong> {{ post.desc }}</p>
-                <p><strong>Posted By:</strong> {{ post.author.username }}</p>
+                <p><strong>Posted By:</strong> <a href="/user?username={{ post.author.username }}" >{{ post.author.username }}</a></p>
                 <p><strong>Item Type:</strong> {{ post.post_type }}</p>
                 {% if post.author == current_user %}
                 <!--Delete button adapted from https://stackoverflow.com/a/10462878-->
@@ -43,7 +43,7 @@
         {% for reply in replies %}
             <div class="reply-item">
                 <hr>
-                <p><strong>User: {{ reply.author.username }}</strong></p>
+                <p><strong>User: <a href="/user?username={{ reply.author.username }}" >{{ reply.author.username }}</a></strong></p>
                 <p><strong>Commented:</strong></p>
                 <p>{{ reply.text }}</p>
                 <p><strong>Time:</strong> {{ calcTimeAgo(reply.timestamp) }}</p>
